name:                sqrts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cbilz/sqrts#readme
license:             BSD3
license-file:        LICENSE
author:              Constantin Bilz
maintainer:          cbilz@protonmail.com
copyright:           (c) Constantin Bilz 2020
category:            Data, Math
build-type:          Simple
extra-source-files:  README.md
cabal-version: >= 1.10

library
  exposed-modules:     Data.Number.Sqrts
  build-depends:       base >= 4.7 && < 5,
                       arithmoi >= 0.10.0.0,
                       containers,
                       integer-logarithms,
                       numbers >= 3000.2.0.3
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/cbilz/sqrts

test-suite testsuite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base >= 3 && < 5,
    arithmoi >= 0.10.0.0,
    containers,
    ieee754,
    integer-logarithms,
    numbers >= 3000.2.0.3,
    QuickCheck == 2.*,
    test-framework >= 0.6,
    test-framework-quickcheck2 >= 0.2

  other-modules:
    Data.Number.Sqrts
    Test.Data.Number.Sqrts

  ghc-options:
    -O2
  default-language: Haskell2010
